--- a/Assignment_4/css/styledeveloper.css
+++ b/Assignment_4/css/styledeveloper.css
@@ -1,59 +1,161 @@
 #masthead {
-    background-color: white;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Push nav to the right */
-    z-index: 10; /* Ensures it stays above other content */
+  background-color: white;
+  width: 100%;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Push nav to the right */
+  z-index: 10; /* Ensures it stays above other content */
 }
 
 .home-page-icon {
-    width: 60px;
+  width: 60px;
 }
 
 #masthead nav {
-    margin-left: auto; /* Ensures nav stays at the far right */
-    margin-right: 5%;
+  margin-left: auto; /* Ensures nav stays at the far right */
+  margin-right: 5%;
 }
 
 #masthead nav ul {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 #masthead nav ul li {
-    margin: 0px 10px;
-    list-style-type: none;
+  margin: 0px 10px;
+  list-style-type: none;
 }
 
 #masthead nav ul a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 #masthead nav ul a:hover {
-    padding: 10px;
-    border: 2px dotted black;
+  padding: 10px;
+  border: 2px dotted black;
 }
 
-
 #footer {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
-    position: fixed;
-    bottom: 0;
-    background-color: white;
-    width: 100%;
-    height: 100px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: auto;
+  bottom: 0;
+  background-color: white;
+  width: 100%;
+  height: 100px;
 }
 
 #footer div {
-    margin-left: 10%;
+  margin-left: 10%;
 }
 
 #footer p {
-    margin-top: 2px;
+  margin-top: 2px;
+}
+
+/* ----------------------------------------------------------------- */
+.hidden-information h2{
+    border: 1px solid black;
+    font-size: 10vw;
+    margin: 0;
+}
+
+.hidden-information2{
+    min-height: 100vh;
+}
+
+.hidden-information2 h2{
+    border: 1px solid black;
+    font-size: 10vw;
+    margin: 0;
+}
+
+h3{
+    display: flex;
+    font-size: 2.5rem;
+    justify-content: center;
+    border: 1px solid black;
+}
+
+.hidden-right p{
+    font-size: 2.5rem;
+    border: 1px solid black;
+}
+
+.genre-adventure{
+    height: 100vh;
+}
+
+.genre-simulation{
+    height: 100vh;
+}
+
+.genre-rpg{
+    height: 100vh;
+}
+
+.genre-strategy{
+    height: 100vh;
+}
+
+.genre-sports{
+    height: 100vh;
+}
+
+.genre-horror{
+    height: 100vh;
+}
+
+footer{
+    height: 100vh;
+}
+
+.adventure-gamecard,
+.simulation-gamecard,
+.rpg-gamecard,
+.sports-gamecard,
+.horror-gamecard,
+.strategy-gamecard {
+    display: flex;
+    flex-wrap: nowrap;
+    overflow: hidden;
+    scroll-behavior: auto;
+    gap: 16px;
+}
+
+.adventure-gamecard::-webkit-scrollbar,
+.simulation-gamecard::-webkit-scrollbar,
+.rpg-gamecard::-webkit-scrollbar,
+.sports-gamecard::-webkit-scrollbar,
+.horror-gamecard::-webkit-scrollbar,
+.strategy-gamecard::-webkit-scrollbar {
+    display: none; /* Chrome, Safari */
+}
+
+.adventure-carousel,
+.simulation-gamecard aside,
+.rpg-gamecard aside,
+.sports-gamecard aside,
+.horror-gamecard aside,
+.strategy-gamecard aside {
+    flex: 0 0 auto; /* impede de encolher e mantém lado a lado */
+    width: 250px;
+    background-color: #111;
+    color: white;
+    border-radius: 12px;
+    padding: 1rem;
+    text-align: center;
+    transition: transform 0.3s;
+}
+
+.adventure-carousel img,
+.simulation-gamecard img,
+.rpg-gamecard img,
+.sports-gamecard img,
+.horror-gamecard img,
+.strategy-gamecard img {
+    width: 100%;
+    border-radius: 8px;
 }
