--- a/Assignment_4/css/news.css
+++ b/Assignment_4/css/news.css
@@ -15,7 +15,7 @@
   color: white;
   /* padding-top: 1rem; */
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   /* overflow: auto; */
 }
@@ -72,20 +72,23 @@
 .arrow {
   position: absolute;
   top: 40%;
-  background: rgba(255,255,255,0.3);
+  background: rgba(255, 255, 255, 0);
   color: white;
   border: none;
-  font-size: 2rem;
+  font-size: 3rem;
   padding: 0.5rem;
   cursor: pointer;
 }
 /* separate positioning for each */
 .arrow.left {
   left: 0;
+  padding-left: 10rem;
+
 }
 
 .arrow.right {
   right: 0;
+  padding-right: 10rem;
 }
 
 /* dots styling below image to show current image */
@@ -115,7 +118,7 @@
 .popular-stories {
   flex: 1;
   background: #1a5bff48;
-  padding: 1rem;
+  /* padding: 1rem; */
   border-radius: 8px;
 }
 
@@ -138,23 +141,26 @@
 /* list positioning */
 .popular-list li {
   display: flex;
+  justify-content: center;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
+  /* padding-left: 1; */
 }
 
 /* icons styling for popular list */
 .popular-list img {
-  width: 24px;
-  height: 24px;
-  margin-right: 10px;
+  width: 64px;
+  height: 64px;
+  padding-right: 2rem;
 }
 
 
 /* NEWS FEED SECTION */
 .news-feed {
-  padding: 2rem;
+  /* padding: 2rem; */
+  padding-top: 1rem;
   background: #f5f5f5;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
