--- a/Assignment_4/css/news.css
+++ b/Assignment_4/css/news.css
@@ -279,7 +279,7 @@
 /* nav links repeat code to make burger menu function in gaming page*/
 
 #masthead {
-    background-color: #00000000;
+    background-color: #ffffff;
     width: 100%;
     position: relative;
     top: 0;
@@ -293,12 +293,12 @@
 }
 
 #masthead p{
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 #masthead nav ul a {
     text-decoration: none;
-    color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     display: inline-block;
     transition: transform 0.01s;
 }
@@ -339,7 +339,7 @@
 .bar {
   height: 4px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
+  background-color: rgb(0, 0, 0);
   transition: all 0.3s ease;
 }
 
