--- a/Assignment_4/css/about.css
+++ b/Assignment_4/css/about.css
@@ -196,7 +196,7 @@ footer {
     height: 100vh;
     display: flex;
     flex-direction: row;
-    transition: opacity 1s ease, transform 1s ease;
+    transition: opacity 1.5s ease, transform 2s ease;
 }
 
 #locations.visible {
@@ -252,28 +252,82 @@ footer {
     }
 }
 
-#footer {
+/* footer styling */
+footer {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(2,1fr);
+    position: relative;
+    bottom: 0;
     background-color: white;
     width: 100%;
-    height: 100px;
+    height: 10%;
     line-height: 0.5;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
     /* Adds a subtle shadow for depth */
 }
 
-#footer div {
-    border-right: 1px solid black;
+.footer-names {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    font-weight: bold;
+    font-size: clamp(0.5rem, 2.5vw, 1rem);
+}
+
+/* footer styling */
+.footer-logo {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.footer-logo img {
+    height: 50px;
+}
+
+.footer-socials {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-socials img {
+    padding: 10px;
+    height: clamp(10px, 2.5vw, 20px);
+    transition: transform 0.2s;
+}
+
+.footer-socials img:hover {
+    transform: scale(1.2);
+}
+
+.footer-bottom-right {
+    gap: 1rem;
+    grid-column-start: 3;
+    grid-row-start: 2;
+    font-size: 12px;
     text-align: center;
 }
 
-#footer a {
-    text-decoration: none;
+.footer-bottom-left{
+    grid-column-start: 1;
+    grid-row-start: 2;
+    font-size: 12px;
+    text-align: center;
 }
 
-#footer svg {
-    width: 13px;
-    fill: blue;
+.footer-links {
+    display: flex;
+    gap: 10px;
+}
+
+.footer-links a {
+    flex-wrap: wrap;
+    text-decoration: none;
+    color: #000;
+    transition: color 0.3s;
+}
+
+.footer-links a:hover {
+    color: #2c9ef5;
 }
