Fix icons showcasing on support and genres

--- a/Assignment_4/css/support.css
+++ b/Assignment_4/css/support.css
@@ -1,13 +1,13 @@
-* {
+/* * {
   box-sizing: border-box;
   font-family: Arial, sans-serif;
-}
+} */
 
-body {
+/* body {
   margin: 0;
   padding: 0;
   background: #f9f9f9;
-}
+} */
 
 .container {
   max-width: 600px;
