--- a/Assignment_4/css/styledeveloper.css
+++ b/Assignment_4/css/styledeveloper.css
@@ -8,6 +8,10 @@
   z-index: 10; /* Ensures it stays above other content */
 }
 
+body{
+  background: linear-gradient(to right, #000, #1a5aff);
+}
+
 .home-page-icon {
   width: 60px;
 }
@@ -73,7 +77,7 @@
 }
 
 .card {
-  background: linear-gradient(135deg, #1a1a1a, #000);
+  background-color: white;
   border-radius: 12px;
   height: 100%;  
   display: flex;
@@ -113,7 +117,7 @@
 .card p {
   font-size: 1.2rem;
   line-height: 1.5;
-  color: #ddd;
+  color: black;
   flex-grow: 1; 
   overflow-y: auto; 
   margin-bottom: 1.5rem;
