--- a/Assignment_4/css/developers.css
+++ b/Assignment_4/css/developers.css
@@ -113,3 +113,118 @@ footer {
     width: 13px;
     fill: blue;
 }
+
+.cards-wrapper {
+  display: flex;
+  flex-direction: row;   
+  height: 100vh;        
+  overflow-x: auto;     
+  scroll-behavior: smooth; 
+}
+
+.card-container {
+  flex: 0 0 33.33%;      
+  height: 100vh;     
+  box-sizing: border-box;
+  padding: 1.5rem;
+  scroll-snap-align: start; 
+}
+
+.card {
+  background-color: white;
+  border-radius: 12px;
+  height: 100%;  
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  box-shadow: 0 8px 24px rgba(0,0,0,0.8);
+  box-sizing: border-box;
+}
+
+.card h2 {
+  font-size: 3rem;
+  margin-bottom: 1rem;
+  color: #f9a825;
+  text-shadow: 0 0 8px #f9a825aa;
+  flex-shrink: 0;
+}
+
+.card img {
+  width: 100%;
+  max-height: 50vh;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-bottom: 1.5rem;
+  box-shadow: 0 4px 15px rgba(255,255,255,0.2);
+  transition: filter 0.5s ease-in-out;
+  flex-shrink: 0;
+  margin-left: auto;
+  margin-right: auto;
+  object-fit: cover;
+  object-position: center top;
+}
+
+.card img:hover {
+  transform: scale(1.05);
+}
+
+.card p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: black;
+  flex-grow: 1; 
+  overflow-y: auto; 
+  margin-bottom: 1.5rem;
+}
+
+.card button {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 900;
+  font-style: italic;
+  font-size: 1.8rem;
+  color: white;
+  background-color: #6225E6;
+  padding: 15px 45px;
+  border: none;
+  border-radius: 0;
+  transform: skewX(-15deg);
+  box-shadow: 6px 6px 0 black;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.card button:hover {
+  box-shadow: 10px 10px 0 blue;
+  transform: skewX(-15deg) scale(1.05);
+}
+
+.card button:focus {
+  outline: none;
+}
+
+#austine-card h2{
+  color: #6225E6;
+}
+
+#austine-card button {
+  background-color: #6225E6;
+  color: white;
+}
+
+#emmanuel-card h2{
+  color: #FBC638;
+}
+
+#emmanuel-card button {
+  background-color: #FBC638;
+  color: white;
+}
+
+#thiago-card h2{
+  color: #E63946;
+}
+
+#thiago-card button {
+  background-color: #E63946;
+  color: white;
+}
