--- a/Assignment_4/css/about.css
+++ b/Assignment_4/css/about.css
@@ -261,7 +261,7 @@ footer {
     bottom: 0;
     background-color: white;
     width: 100%;
-    height: 10%;
+    /* height: 10%; */
     line-height: 0.5;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
     /* Adds a subtle shadow for depth */
