--- a/Assignment_4/css/home.css
+++ b/Assignment_4/css/home.css
@@ -123,8 +123,6 @@ aside {
   transform: rotate(-45deg) translate(5px, -5px);
 }
 
-
-
 .sketchfab-embed-wrapper {
     position: fixed;
     top: 0;
@@ -194,7 +192,7 @@ aside {
     bottom: 0;
     background-color: white;
     width: 100%;
-    height: 10%;
+    height: 120px;
     line-height: 0.5;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
     /* Adds a subtle shadow for depth */
