--- a/Assignment_4/css/developers.css
+++ b/Assignment_4/css/developers.css
@@ -90,28 +90,82 @@ footer {
 
 #footer {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: auto;
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(2,1fr);
     position: fixed;
     bottom: 0;
     background-color: white;
     width: 100%;
-    height: 100px;
+    height: 10%;
     line-height: 0.5;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.9);
+    /* Adds a subtle shadow for depth */
 }
 
-#footer div {
-    border-right: 1px solid black;
+.footer-names {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-weight: bold;
+    font-size: clamp(0.5rem, 2.5vw, 1rem);
+}
+
+/* footer styling */
+.footer-logo {
     text-align: center;
 }
 
-#footer a {
-    text-decoration: none;
+.footer-logo img {
+    height: 50px;
 }
 
-#footer svg {
-    width: 13px;
-    fill: blue;
+.footer-socials {
+    display: flex;
+    justify-content: center;
+    /* margin: 10px; */
+}
+
+.footer-socials img {
+    padding: 10px;
+    height: clamp(10px, 2.5vw, 20px);
+    transition: transform 0.2s;
+}
+
+.footer-socials img:hover {
+    transform: scale(1.2);
+}
+
+.footer-bottom-right {
+    gap: 1rem;
+    grid-column-start: 3;
+    grid-row-start: 2;
+    font-size: 12px;
+    text-align: center;
+    /* align-items: flex-end; */
+}
+
+.footer-bottom-left{
+    grid-column-start: 1;
+    grid-row-start: 2;
+    font-size: 12px;
+    text-align: center;
+    /* align-items: flex-end; */
+}
+
+.footer-links {
+    display: flex;
+    gap: 10px;
+}
+
+.footer-links a {
+    flex-wrap: wrap;
+    text-decoration: none;
+    color: #000;
+    transition: color 0.3s;
+}
+
+.footer-links a:hover {
+    color: #2c9ef5;
 }
 
 .cards-wrapper {
