--- a/Assignment_4/css/events.css
+++ b/Assignment_4/css/events.css
@@ -37,8 +37,7 @@ aside {
 #masthead {
     background-color: white;
     width: 100%;
-    position: fixed;
-    top: 0;
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between; /* Push nav to the right */
