Update navbar and footer

--- a/Assignment_4/css/news.css
+++ b/Assignment_4/css/news.css
@@ -276,7 +276,7 @@
 }
 
 
-/* nav links repeat code to make burger menu function in gaming page*/
+/* nav links repeat code to make burger menu function in news page*/
 
 #masthead {
     background-color: #ffffff;
